--- a/AdventureWorksAPI/appsettings.json
+++ b/AdventureWorksAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=remotemysql.com;Database=d1gJi53tkb;Uid=d1gJi53tkb;Pwd=NhFd72jfQH;"
+  }
 }
