--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,10 @@ AutoTest.Net/
 # Installshield output folder
 [Ee]xpress/
 
+#Configuration
+appsettings.json
+
+
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
 DocProject/Help/*.HxT
