--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+	<GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+	<Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
 
 </Project>
